--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -739,7 +739,8 @@
 	"menu-contraptions-cover": "Content cover", 
 	"menu-contraptions-background": "Backgrounds", 
 	"menu-contraptions-menus": "Menu layouts", 
-	"menu-contraptions-music": "Music", 
+	"menu-contraptions-music": "Music tracks", 
+	"menu-contraptions-sound": "Sound effects", 
 	"menu-contraptions-forms": "Input Forms", 
 	"menu-contraptions-interfaces": "Interfaces", 
 	"menu-contraptions-targets": "Targets", 
@@ -750,7 +751,7 @@
 	"menu-narrative-dialogues": "Dialogues", 
 	"menu-narrative-dflow": "Decision flow", 
 	"menu-narrative-inventory": "Inventory", 
-	"menu-narrative-battle": "Battle card system", 
+	"menu-narrative-battle": "Card battle system", 
 	
 	"window-kfmanage-title": "Scene keyframes",
 	"window-kfmanage-keyframes": "Keyframes",
@@ -896,14 +897,14 @@
 	"window-narrdflow-gap": "Distance gap", 
 	"window-narrdflow-btset": "Set decision flow display", 
 	"window-narrdflow-nobutton": "You must set the graphic for the button.", 
-	"window-narrdflow-errorset": "Error whiel setting the display properties. Please try again.", 
+	"window-narrdflow-errorset": "Error while setting the display properties. Please try again.", 
 	"window-narrdflow-font": "Font", 
 	"window-narrdflow-fontsize": "Font size", 
 	"window-narrdflow-fontc": "Font color", 
 	"window-narrdflow-ersave": "Error while saving the decision flow settings. Please try again.",
 	"window-narrdflow-ersave1": "Your access level doesn't allow setting the decision flow information.",
 	"window-narrdflow-oksave": "The decision flow setting was saved.",
-	"window-narrdflow-nolist": "Erro whiel getting the scenes decision flow information.", 
+	"window-narrdflow-nolist": "Erro while getting the scenes decision flow information.", 
 	"window-narrdflow-scenes": "Scenes with decision flow set", 
 	"window-narrdflow-options": "Options for selected scene", 
 	"window-narrdflow-loadscene": "Load selected scene", 
@@ -911,15 +912,16 @@
 	"window-narrdflow-nooption": "No scenes with decision flow set found.", 
 	
 	"window-narrinv-title": "Inventory setup", 
-	"window-narrinv-settings": "Display settings", 
+	"window-narrinv-settings": "Settings", 
 	"window-narrinv-setabout": "Use the following form to adjust and display the inventory.", 
 	"window-narrinv-imgbgh": "Horizontal display background picture", 
 	"window-narrinv-imgbgv": "Vertical display background picture", 
 	"window-narrinv-button": "Picture for the button to close the inventory (displayed in the top right)", 
+	"window-narrinv-sound": "Item pick sound effect (empty for none)", 
 	"window-narrinv-font": "Font", 
 	"window-narrinv-fontsize": "Font size", 
 	"window-narrinv-fontc": "Font color", 
-	"window-narrinv-btset": "Set inventory display", 
+	"window-narrinv-btset": "Update inventory settings", 
 	"window-narrinv-items": "Available items", 
 	"window-narrinv-loaditem": "Load selected item", 
 	"window-narrinv-removeitem": "Remove selected item", 
@@ -947,7 +949,7 @@
 	"window-narrinv-modeconsumable": "only ocnsumable items", 
 	"window-narrinv-modek": "only key items", 
 	
-	"window-narrbattle-title": "Battle card system setup", 
+	"window-narrbattle-title": "Card battle system setup", 
 	"window-narrbattle-display": "Display settings", 
 	"window-narrbattle-setabout": "Use the following form to adjust the battle card display.", 
 	"window-narrbattle-imgattr": "Background picture for attribute button", 
@@ -991,7 +993,13 @@
 	"window-narrbattle-oksave": "The battle cards list was saved.",
 	"window-narrbattle-setcard": "Set battle card", 
 	"window-narrbattle-savecards": "Save battle cards", 
-	
+	"window-narrbattle-sounds": "Sound settings", 
+	"window-narrbattle-soundsabout": "You can set sound effect for battle display (leave blank if you don't want to use them).",
+	"window-narrbattle-soundpick": "Sound for attribute pick", 
+	"window-narrbattle-soundwin": "Sound for victory in comparison", 
+	"window-narrbattle-soundloose": "Sound for defeat in comparison", 
+	"window-narrbattle-soundtie": "Sound for a tie in the comparison.", 
+	"window-narrbattle-soundsave": "Save sound settings", 
 	
 	"window-narrdiag-title": "Dialogues",
 	"window-narrdiag-folders": "Groups",
@@ -1164,6 +1172,21 @@
 	"window-contrmusic-ersave": "Error while saving the music tracks. Please try again.",
 	"window-contrmusic-ersave1": "Your access level doesn't allow setting the music tracks.",
 	"window-contrmusic-oksave": "The music tracks were saved.",
+	
+	"window-contrsound-title": "Sound effects",
+	"window-contrsound-registered": "Registered sound effects",
+	"window-contrsound-load": "Load sound effect",
+	"window-contrsound-remove": "Remove sound effect",
+	"window-contrsound-name": "Sound effect name",
+	"window-contrsound-add": "Add/update sound effect",
+	"window-contrsound-properties": "Sound effect properties",
+	"window-contrsound-file": "Audio file", 
+	"window-contrsound-save": "Save current sound effect settings",
+	"window-contrsound-noaudio": "You must set the track audio file.",
+	"window-contrsound-noname": "You must give the sound effect a name with at least 3 characters.",
+	"window-contrsound-ersave": "Error while saving the sound effects. Please try again.",
+	"window-contrsound-ersave1": "Your access level doesn't allow setting the sound effects.",
+	"window-contrsound-oksave": "The sound effects were saved.",
 	
 	"menu-media-title": "Media", 
 	"menu-media-collectionsadd": "Add from collection", 
@@ -1695,6 +1718,8 @@
 	"acblock-error": "on error", 
 	"acblock-select": "when selected", 
 	"acblock-complete": "when completed", 
+	"acblock-win": "on victory", 
+	"acblock-loose": "on defeat", 
 	"acblock-or": "or", 
 	"acblock-button": "Set action block", 
 	"acblock-valcopy": "Retrieved value", 
@@ -1746,6 +1771,20 @@
 	"acinfo-invtostringc-p1": "the string variable to save to", 
 	"acinfo-invfromstringc": "load consumable items from a string variable", 
 	"acinfo-invfromstringc-p1": "the string variable to load from", 
+	"acinfo-battleshow": "start a card battle", 
+	"acinfo-battleshow-p1": "player cards (up to 5, split by commas)", 
+	"acinfo-battleshow-p2": "opponent cards (up to 5, split by commas)", 
+	"acinfo-battleclose": "close current card battle", 
+	"acinfo-battlesetattr": "set modifiers for player card attributes", 
+	"acinfo-battlesetattr-p1": "attribute number (1 to 5)", 
+	"acinfo-battlesetattr-p2": "fixed gain(+) or reduction (-)", 
+	"acinfo-battlesetattr-p3": "random gain", 
+	"acinfo-battlesetattr-p4": "random reduction", 
+	"acinfo-battlesetoppo": "set modifiers for opponent card attributes", 
+	"acinfo-battlesetoppo-p1": "attribute number (1 to 5)", 
+	"acinfo-battlesetoppo-p2": "fixed gain(+) or reduction (-)", 
+	"acinfo-battlesetoppo-p3": "random gain", 
+	"acinfo-battlesetoppo-p4": "random reduction", 
 	
 	"window-acbruntime-title": "Runtime", 
 	"acinfo-runinstall": "install as an application", 
@@ -1789,6 +1828,15 @@
 	"acinfo-musicstop": "stop music playback",
 	"acinfo-musicvolume": "set music track volume", 
 	"acinfo-musicvolume-p1": "sound volume (0 to 100)", 
+	"acinfo-soundplay": "play a sound effect", 
+	"acinfo-soundplay-p1": "sound effect name", 
+	"acinfo-soundpause": "pause a sound effect", 
+	"acinfo-soundpause-p1": "sound effect name (leave empty for all)", 
+	"acinfo-soundstop": "stop sound effect playback",
+	"acinfo-soundstop-p1": "sound effect name (leave empty for all)", 
+	"acinfo-soundvolume": "set sound effect volume", 
+	"acinfo-soundvolume-p1": "sound volume (0 to 100)", 
+	"acinfo-soundvolume-p2": "sound effect name (leave empty for all)", 
 	"acinfo-showform": "show an input form",
 	"acinfo-showform-p1": "the input form name", 
 	"acinfo-showform-p2": "form x position", 
@@ -1848,6 +1896,9 @@
 	"acinfo-sceneloadkf": "load a keyframe", 
 	"acinfo-sceneloadkf-p1": "the keyframe number to load", 
 	"acinfo-scenehistoryback": "load the previous scene", 
+	"acinfo-sceneshake": "shake the scene display", 
+	"acinfo-sceneshake-p1": "effect duration in seconds (accepts float numbers)", 
+	"acinfo-sceneshake-p2": "effect instensity", 
 	
 	"window-acbbool-title": "Boolean values actions and conditions", 
 	"acinfo-ifbool": "compare two boolean values", 
@@ -2538,6 +2589,11 @@
 	"acinfo-overlayshow-p3": "add additional information to overlay URL?", 
 	"acinfo-overlayshow-p4": "additional informaiton to send (may add more)", 
 	
+	"window-tactions-title": "Testing setup", 
+	"window-tactions-about": "You can set actions to be run right before each test. Additionally, you can set a waiting time before the test actually begins to ensure that even actions that take some time to execute are completed.", 
+	"window-tactions-button": "Set testing actions",
+	"window-tactions-delay": "Delay before actually start the test (miliseconds)", 
+	
 	"tooltip-action-switch": "switch input mode", 
 	"tooltip-action-copy": "copy the current code to clipboard", 
 	"tooltip-action-scene": "movie and scene navigation actions", 
@@ -2561,6 +2617,15 @@
 	"tooltip-action-blclose": "reduce action block view", 
 	"tooltip-action-blup": "move action block up", 
 	"tooltip-action-bldown": "move action clock down", 
+	"tooltip-playercontrols-screen": "alternate aspect", 
+	"tooltip-playercontrols-zoomp": "increase zoom", 
+	"tooltip-playercontrols-zoomm": "decrease zoom", 
+	"tooltip-playercontrols-zoomfit": "fit display", 
+	"tooltip-playercontrols-zoom100": "zoom 100%", 
+	"tooltip-playercontrols-left": "previous keyframe", 
+	"tooltip-playercontrols-right": "next keyframe", 
+	"tooltip-playercontrols-actions": "testing actions", 
+	"tooltip-playercontrols-play": "start test", 
 
     "login-welcome": "Welcome to TilBuci! Please use the form below to enter the editor."
 }
