--- a/server/public_html/app/assets/language/default.json
+++ b/server/public_html/app/assets/language/default.json
@@ -739,7 +739,8 @@
 	"menu-contraptions-cover": "Content cover", 
 	"menu-contraptions-background": "Backgrounds", 
 	"menu-contraptions-menus": "Menu layouts", 
-	"menu-contraptions-music": "Music", 
+	"menu-contraptions-music": "Music tracks", 
+	"menu-contraptions-sound": "Sound effects", 
 	"menu-contraptions-forms": "Input Forms", 
 	"menu-contraptions-interfaces": "Interfaces", 
 	"menu-contraptions-targets": "Targets", 
@@ -749,6 +750,8 @@
 	"menu-narrative-characters": "Characters", 
 	"menu-narrative-dialogues": "Dialogues", 
 	"menu-narrative-dflow": "Decision flow", 
+	"menu-narrative-inventory": "Inventory", 
+	"menu-narrative-battle": "Card battle system", 
 	
 	"window-kfmanage-title": "Scene keyframes",
 	"window-kfmanage-keyframes": "Keyframes",
@@ -894,19 +897,109 @@
 	"window-narrdflow-gap": "Distance gap", 
 	"window-narrdflow-btset": "Set decision flow display", 
 	"window-narrdflow-nobutton": "You must set the graphic for the button.", 
-	"window-narrdflow-errorset": "Error whiel setting the display properties. Please try again.", 
+	"window-narrdflow-errorset": "Error while setting the display properties. Please try again.", 
 	"window-narrdflow-font": "Font", 
 	"window-narrdflow-fontsize": "Font size", 
 	"window-narrdflow-fontc": "Font color", 
 	"window-narrdflow-ersave": "Error while saving the decision flow settings. Please try again.",
 	"window-narrdflow-ersave1": "Your access level doesn't allow setting the decision flow information.",
 	"window-narrdflow-oksave": "The decision flow setting was saved.",
-	"window-narrdflow-nolist": "Erro whiel getting the scenes decision flow information.", 
+	"window-narrdflow-nolist": "Erro while getting the scenes decision flow information.", 
 	"window-narrdflow-scenes": "Scenes with decision flow set", 
 	"window-narrdflow-options": "Options for selected scene", 
 	"window-narrdflow-loadscene": "Load selected scene", 
 	"window-narrdflow-loadoption": "Load selected option scene", 
 	"window-narrdflow-nooption": "No scenes with decision flow set found.", 
+	
+	"window-narrinv-title": "Inventory setup", 
+	"window-narrinv-settings": "Settings", 
+	"window-narrinv-setabout": "Use the following form to adjust and display the inventory.", 
+	"window-narrinv-imgbgh": "Horizontal display background picture", 
+	"window-narrinv-imgbgv": "Vertical display background picture", 
+	"window-narrinv-button": "Picture for the button to close the inventory (displayed in the top right)", 
+	"window-narrinv-sound": "Item pick sound effect (empty for none)", 
+	"window-narrinv-font": "Font", 
+	"window-narrinv-fontsize": "Font size", 
+	"window-narrinv-fontc": "Font color", 
+	"window-narrinv-btset": "Update inventory settings", 
+	"window-narrinv-items": "Available items", 
+	"window-narrinv-loaditem": "Load selected item", 
+	"window-narrinv-removeitem": "Remove selected item", 
+	"window-narrinv-itname": "Item ID", 
+	"window-narrinv-ittype": "Item type", 
+	"window-narrinv-ittypec": "consumable", 
+	"window-narrinv-ittypek": "key", 
+	"window-narrinv-itgraphic": "item picture (square format)", 
+	"window-narrinv-itaction": "Item activation actions", 
+	"window-narrinv-saveitem": "Set item",
+	"window-narrinv-saveinventory": "Save inventory items",
+	"window-narrinv-titleitem": "Inventory item", 
+	"window-narrinv-itemno": "You must provide the name and he picture for the item to be set.", 
+	"window-narrinv-ersave": "Error while saving the inventory items. Please try again.",
+	"window-narrinv-ersave1": "Your access level doesn't allow setting the inventory items.",
+	"window-narrinv-oksave": "The inventory items list was saved.",
+	"window-narrinv-noclose": "The close inventory button graphis must be set.", 
+	"window-narrinv-nobg": "You must set at least one of the background images, either horizontal or vertical.", 
+	"window-narrinv-errorset": "Error while setting the display properties. Please try again.", 
+	"window-narrinv-ersaveset": "Error while saving the inventory display settings. Please try again.",
+	"window-narrinv-ersave1set": "Your access level doesn't allow setting the inventory display settings.",
+	"window-narrinv-oksaveset": "The inventory display settings were saved.",
+	"window-narrinv-mode": "Inventory mode", 
+	"window-narrinv-modeall": "key and consumable items", 
+	"window-narrinv-modeconsumable": "only ocnsumable items", 
+	"window-narrinv-modek": "only key items", 
+	
+	"window-narrbattle-title": "Card battle system setup", 
+	"window-narrbattle-display": "Display settings", 
+	"window-narrbattle-setabout": "Use the following form to adjust the battle card display.", 
+	"window-narrbattle-imgattr": "Background picture for attribute button", 
+	"window-narrbattle-card": "Background picture for card", 
+	"window-narrbattle-imgbgh": "Horizontal display background picture", 
+	"window-narrbattle-imgbgv": "Vertical display background picture", 
+	"window-narrbattle-button": "Picture for the button to close the battle (displayed in the top right)", 
+	"window-narrbattle-font": "Font", 
+	"window-narrbattle-fontsize": "Font size", 
+	"window-narrbattle-fontc": "Font color", 
+	"window-narrbattle-btset": "Set battle card system display", 
+	"window-narrbattle-attributes": "Card attributes", 
+	"window-narrbattle-attrabout": "You can set names for up to 5 attributes to be used in the battle card system.",
+	"window-narrbattle-attr1": "First card attribute", 
+	"window-narrbattle-attr2": "Second card attribute", 
+	"window-narrbattle-attr3": "Third card attribute", 
+	"window-narrbattle-attr4": "Fourth card attribute", 
+	"window-narrbattle-attr5": "Fifth card attribute", 
+	"window-narrbattle-btattr": "Set card attribute names",
+	"window-narrbattle-noattributes": "You must provide the name for at least one attribute.", 
+	"window-narrbattle-noclose": "You must set the close, attribute and card background graphics.", 
+	"window-narrbattle-nobg": "You must set at least one of the background images, either horizontal or vertical.", 
+	"window-narrbattle-errorset": "Error while setting the display properties. Please try again.", 
+	"window-narrbattle-oksaveset": "The battle card settings were saved.",
+	"window-narrbattle-ersaveset": "Error while saving the battle card settings. Please try again.",
+	"window-narrbattle-ersave1set": "Your access level doesn't allow change the battle card settings.",
+	"window-narrbattle-cards": "Cards", 
+	"window-narrbattle-available": "Available cards", 
+	"window-narrbattle-loadcards": "Load selected card", 
+	"window-narrbattle-removecard": "Remove selected card", 
+	"window-narrbattle-cardname": "Card ID", 
+	"window-narrbattle-cardgraphic": "Card picture (square format)", 
+	"window-narrbattle-cardat1": "First attribute value", 
+	"window-narrbattle-cardat2": "Second attribute value", 
+	"window-narrbattle-cardat3": "Third attribute value", 
+	"window-narrbattle-cardat4": "Fourth attribute value", 
+	"window-narrbattle-cardat5": "Fifty attribute value", 
+	"window-narrbattle-cardno": "You must provide the card ID and its graphic.", 
+	"window-narrbattle-ersave": "Error while saving the battle cards. Please try again.",
+	"window-narrbattle-ersave1": "Your access level doesn't allow setting the battle cards.",
+	"window-narrbattle-oksave": "The battle cards list was saved.",
+	"window-narrbattle-setcard": "Set battle card", 
+	"window-narrbattle-savecards": "Save battle cards", 
+	"window-narrbattle-sounds": "Sound settings", 
+	"window-narrbattle-soundsabout": "You can set sound effect for battle display (leave blank if you don't want to use them).",
+	"window-narrbattle-soundpick": "Sound for attribute pick", 
+	"window-narrbattle-soundwin": "Sound for victory in comparison", 
+	"window-narrbattle-soundloose": "Sound for defeat in comparison", 
+	"window-narrbattle-soundtie": "Sound for a tie in the comparison.", 
+	"window-narrbattle-soundsave": "Save sound settings", 
 	
 	"window-narrdiag-title": "Dialogues",
 	"window-narrdiag-folders": "Groups",
@@ -1079,6 +1172,21 @@
 	"window-contrmusic-ersave": "Error while saving the music tracks. Please try again.",
 	"window-contrmusic-ersave1": "Your access level doesn't allow setting the music tracks.",
 	"window-contrmusic-oksave": "The music tracks were saved.",
+	
+	"window-contrsound-title": "Sound effects",
+	"window-contrsound-registered": "Registered sound effects",
+	"window-contrsound-load": "Load sound effect",
+	"window-contrsound-remove": "Remove sound effect",
+	"window-contrsound-name": "Sound effect name",
+	"window-contrsound-add": "Add/update sound effect",
+	"window-contrsound-properties": "Sound effect properties",
+	"window-contrsound-file": "Audio file", 
+	"window-contrsound-save": "Save current sound effect settings",
+	"window-contrsound-noaudio": "You must set the track audio file.",
+	"window-contrsound-noname": "You must give the sound effect a name with at least 3 characters.",
+	"window-contrsound-ersave": "Error while saving the sound effects. Please try again.",
+	"window-contrsound-ersave1": "Your access level doesn't allow setting the sound effects.",
+	"window-contrsound-oksave": "The sound effects were saved.",
 	
 	"menu-media-title": "Media", 
 	"menu-media-collectionsadd": "Add from collection", 
@@ -1610,6 +1718,8 @@
 	"acblock-error": "on error", 
 	"acblock-select": "when selected", 
 	"acblock-complete": "when completed", 
+	"acblock-win": "on victory", 
+	"acblock-loose": "on defeat", 
 	"acblock-or": "or", 
 	"acblock-button": "Set action block", 
 	"acblock-valcopy": "Retrieved value", 
@@ -1632,6 +1742,49 @@
 	"acinfo-diaglast": "show the last dialogue text line", 
 	"acinfo-diagfirst": "show the first dialogue text line", 
 	"acinfo-diagclose": "closes the current dialogue", 
+	"acinfo-invshow": "show inventory", 
+	"acinfo-invclose": "close inventory", 
+	"acinfo-invaddkey": "add a key item to inventory", 
+	"acinfo-invaddkey-p1": "the item ID", 
+	"acinfo-invremkey": "remove a key item from inventory", 
+	"acinfo-invremkey-p1": "the item ID", 
+	"acinfo-invclearkey": "remove all key items from inventory", 
+	"acinfo-invhaskey": "in a key item on inventory?", 
+	"acinfo-invhaskey-p1": "the item ID", 
+	"acinfo-invaddcons": "add a consumable item to inventory", 
+	"acinfo-invaddcons-p1": "the item ID", 
+	"acinfo-invaddcons-p2": "the amount to add", 
+	"acinfo-invremcons": "remove a consumable item to inventory", 
+	"acinfo-invremcons-p1": "the item ID", 
+	"acinfo-invconsume": "consume an inventory item", 
+	"acinfo-invconsume-p1": "the item ID", 
+	"acinfo-invclearcons": "remove all consumable inventory items", 
+	"acinfo-invtostring": "save current inventory to a string variable", 
+	"acinfo-invtostring-p1": "the string variable to save to", 
+	"acinfo-invfromstring": "load inventory from a string variable", 
+	"acinfo-invfromstring-p1": "the string variable to load from", 
+	"acinfo-invtostringk": "save current key items to a string variable", 
+	"acinfo-invtostringk-p1": "the string variable to save to", 
+	"acinfo-invfromstringk": "load key itemns from a string variable", 
+	"acinfo-invfromstringk-p1": "the string variable to load from", 
+	"acinfo-invtostringc": "save current consumable items to a string variable", 
+	"acinfo-invtostringc-p1": "the string variable to save to", 
+	"acinfo-invfromstringc": "load consumable items from a string variable", 
+	"acinfo-invfromstringc-p1": "the string variable to load from", 
+	"acinfo-battleshow": "start a card battle", 
+	"acinfo-battleshow-p1": "player cards (up to 5, split by commas)", 
+	"acinfo-battleshow-p2": "opponent cards (up to 5, split by commas)", 
+	"acinfo-battleclose": "close current card battle", 
+	"acinfo-battlesetattr": "set modifiers for player card attributes", 
+	"acinfo-battlesetattr-p1": "attribute number (1 to 5)", 
+	"acinfo-battlesetattr-p2": "fixed gain(+) or reduction (-)", 
+	"acinfo-battlesetattr-p3": "random gain", 
+	"acinfo-battlesetattr-p4": "random reduction", 
+	"acinfo-battlesetoppo": "set modifiers for opponent card attributes", 
+	"acinfo-battlesetoppo-p1": "attribute number (1 to 5)", 
+	"acinfo-battlesetoppo-p2": "fixed gain(+) or reduction (-)", 
+	"acinfo-battlesetoppo-p3": "random gain", 
+	"acinfo-battlesetoppo-p4": "random reduction", 
 	
 	"window-acbruntime-title": "Runtime", 
 	"acinfo-runinstall": "install as an application", 
@@ -1675,6 +1828,15 @@
 	"acinfo-musicstop": "stop music playback",
 	"acinfo-musicvolume": "set music track volume", 
 	"acinfo-musicvolume-p1": "sound volume (0 to 100)", 
+	"acinfo-soundplay": "play a sound effect", 
+	"acinfo-soundplay-p1": "sound effect name", 
+	"acinfo-soundpause": "pause a sound effect", 
+	"acinfo-soundpause-p1": "sound effect name (leave empty for all)", 
+	"acinfo-soundstop": "stop sound effect playback",
+	"acinfo-soundstop-p1": "sound effect name (leave empty for all)", 
+	"acinfo-soundvolume": "set sound effect volume", 
+	"acinfo-soundvolume-p1": "sound volume (0 to 100)", 
+	"acinfo-soundvolume-p2": "sound effect name (leave empty for all)", 
 	"acinfo-showform": "show an input form",
 	"acinfo-showform-p1": "the input form name", 
 	"acinfo-showform-p2": "form x position", 
@@ -1734,6 +1896,9 @@
 	"acinfo-sceneloadkf": "load a keyframe", 
 	"acinfo-sceneloadkf-p1": "the keyframe number to load", 
 	"acinfo-scenehistoryback": "load the previous scene", 
+	"acinfo-sceneshake": "shake the scene display", 
+	"acinfo-sceneshake-p1": "effect duration in seconds (accepts float numbers)", 
+	"acinfo-sceneshake-p2": "effect instensity", 
 	
 	"window-acbbool-title": "Boolean values actions and conditions", 
 	"acinfo-ifbool": "compare two boolean values", 
@@ -2424,6 +2589,11 @@
 	"acinfo-overlayshow-p3": "add additional information to overlay URL?", 
 	"acinfo-overlayshow-p4": "additional informaiton to send (may add more)", 
 	
+	"window-tactions-title": "Testing setup", 
+	"window-tactions-about": "You can set actions to be run right before each test. Additionally, you can set a waiting time before the test actually begins to ensure that even actions that take some time to execute are completed.", 
+	"window-tactions-button": "Set testing actions",
+	"window-tactions-delay": "Delay before actually start the test (miliseconds)", 
+	
 	"tooltip-action-switch": "switch input mode", 
 	"tooltip-action-copy": "copy the current code to clipboard", 
 	"tooltip-action-scene": "movie and scene navigation actions", 
@@ -2447,6 +2617,15 @@
 	"tooltip-action-blclose": "reduce action block view", 
 	"tooltip-action-blup": "move action block up", 
 	"tooltip-action-bldown": "move action clock down", 
+	"tooltip-playercontrols-screen": "alternate aspect", 
+	"tooltip-playercontrols-zoomp": "increase zoom", 
+	"tooltip-playercontrols-zoomm": "decrease zoom", 
+	"tooltip-playercontrols-zoomfit": "fit display", 
+	"tooltip-playercontrols-zoom100": "zoom 100%", 
+	"tooltip-playercontrols-left": "previous keyframe", 
+	"tooltip-playercontrols-right": "next keyframe", 
+	"tooltip-playercontrols-actions": "testing actions", 
+	"tooltip-playercontrols-play": "start test", 
 
     "login-welcome": "Welcome to TilBuci! Please use the form below to enter the editor."
 }
